# librecalphad

./: .aider.chat.history.md  .aider.input.history  .gitignore  LICENSE  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db
libreCalphad/: OpenDB.py  plotting.py  utilities.py
libreCalphad/databases/: LC-steels-GHSER-input.tdb  LC-steels-GHSER-input.xml  LC-steels-input.bak.xml  LC-steels-input.tdb  LC-steels-input.xml  LC-steels-input_1.tdb  LC-steels-thermo.tdb  LC-steels-thermo.xml  LC-steels_references.json  README.md  db_utils.py  mcmc-log.txt  mf-mobility.tdb  mf-steel-3g.tdb  mf-steel.tdb  mf-volume.tdb  phase_models.json  run_mcmc.yaml  run_param_gen.yaml  run_param_gen_GHSER.yaml  unary50.tdb
libreCalphad/examples/: Cp_fitting.ipynb  martensite_start.ipynb  thermodynamics.ipynb
libreCalphad/models/: energy.py  heat_capacity.py  magnetic_model.py  martensite_start.py  plotting.py  rk_fit.py  segmented_regression.py  shear_modulus.ipynb  steels.py  thermodynamics.py  utilities.py
libreCalphad/models/martensite_start/: README.md  calc_martensite_start.py  martensite_start.ipynb  martensite_start.py  martensite_start.tdb  model_parameters.md  pags_fitting.ipynb  references.bib
libreCalphad/tests/: synthetic_temp_dep.csv  test.tdb  test_LAS.py  test_databases.py  test_energy.py  test_heat_capacity.py  test_plotting.py  test_pycalphad.bak  test_rk_fit.bak  test_rk_fit.py  test_segmented_regression.py  test_twostate_data.json  test_utilities.py  test_xiong_data.json
libreCalphad/tests/test_database_files/: LC-steels-input.xml
(+2751 files in other folders)
