[build-system]
requires = [
    "pycalphad",
    "setuptools",
    "pymatgen",
]
build-backend = "setuptools.build_meta"

[project]
name='libreCalphad'
version='0.0.1'
authors=[
    {name = 'Matt Frichtl'},
]
description='Open-source Calphad databases and property models.'
license={text = 'GNU GPL v3'}
#provides='calphad-opendb'
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: GNU GPL v3',

    # Supported Python versions
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
